--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "sass": "^1.57.1",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4",
